# droid-r2bk

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  conda_env.yml
docs/: notes.md
lib/c/steering_module_firmware/: CMakeLists.txt  main.c
lib/protobuf/: BUILD.bazel
lib/protobuf/droid_r2bk/comm/auth/: BUILD.bazel  auth.proto  auth_pb2.pyi
lib/protobuf/droid_r2bk/comm/cnc/: BUILD.bazel  cnc.proto  cnc_pb2.pyi
lib/protobuf/droid_r2bk/comm/discovery/: BUILD.bazel  discovery.proto  discovery_pb2.pyi
lib/protobuf/droid_r2bk/comm/types/: BUILD.bazel  types.proto  types_pb2.pyi
lib/python/: BUILD.bazel  conftest.py
lib/stl/: R2BK_Remote_Back_Center_RPI_3B.stl  notes.md
linux-img/r2bk-remote/: config.txt
