load("@rules_proto//proto:defs.bzl", "proto_library")
load("@build_stack_rules_proto//rules/cc:proto_cc_library.bzl", "proto_cc_library")
load("@build_stack_rules_proto//rules/py:proto_py_library.bzl", "proto_py_library")
load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")

proto_library(
    name = "droid_r2bk_comm_auth_proto",
    srcs = ["auth.proto"],
    visibility = ["//visibility:public"],
    deps = ["//lib/protobuf/droid_r2bk/comm/types:droid_r2bk_comm_types_proto"],
)

proto_cc_library(
    name = "droid_r2bk_comm_auth_cc_library",
    srcs = ["auth.pb.cc"],
    hdrs = ["auth.pb.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/protobuf/droid_r2bk/comm/types:droid_r2bk_comm_types_cc_library",
        "@com_google_protobuf//:protobuf",
    ],
)

proto_compile(
    name = "droid_r2bk_comm_auth_cpp_compile",
    outputs = [
        "auth.pb.cc",
        "auth.pb.h",
    ],
    plugins = ["@build_stack_rules_proto//plugin/builtin:cpp"],
    proto = "droid_r2bk_comm_auth_proto",
)

proto_compile(
    name = "droid_r2bk_comm_auth_python_compile",
    outputs = [
        "auth_pb2.py",
        "auth_pb2.pyi",
    ],
    plugins = [
        "@build_stack_rules_proto//plugin/builtin:pyi",
        "@build_stack_rules_proto//plugin/builtin:python",
    ],
    proto = "droid_r2bk_comm_auth_proto",
)

proto_py_library(
    name = "droid_r2bk_comm_auth_py_library",
    srcs = ["auth_pb2.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/protobuf/droid_r2bk/comm/types:droid_r2bk_comm_types_py_library",
        "@com_google_protobuf//:protobuf_python",
    ],
)
