load("@rules_proto//proto:defs.bzl", "proto_library")
load("@build_stack_rules_proto//rules/cc:proto_cc_library.bzl", "proto_cc_library")
load("@build_stack_rules_proto//rules/py:proto_py_library.bzl", "proto_py_library")
load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")

proto_library(
    name = "droid_r2bk_comm_cnc_proto",
    srcs = ["cnc.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/protobuf/droid_r2bk/comm/auth:droid_r2bk_comm_auth_proto",
        "//lib/protobuf/droid_r2bk/comm/types:droid_r2bk_comm_types_proto",
    ],
)

proto_cc_library(
    name = "droid_r2bk_comm_cnc_cc_library",
    srcs = ["cnc.pb.cc"],
    hdrs = ["cnc.pb.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/protobuf/droid_r2bk/comm/auth:droid_r2bk_comm_auth_cc_library",
        "//lib/protobuf/droid_r2bk/comm/types:droid_r2bk_comm_types_cc_library",
        "@com_google_protobuf//:protobuf",
    ],
)

proto_compile(
    name = "droid_r2bk_comm_cnc_cpp_compile",
    outputs = [
        "cnc.pb.cc",
        "cnc.pb.h",
    ],
    plugins = ["@build_stack_rules_proto//plugin/builtin:cpp"],
    proto = "droid_r2bk_comm_cnc_proto",
)

proto_compile(
    name = "droid_r2bk_comm_cnc_python_compile",
    outputs = [
        "cnc_pb2.py",
        "cnc_pb2.pyi",
    ],
    plugins = [
        "@build_stack_rules_proto//plugin/builtin:pyi",
        "@build_stack_rules_proto//plugin/builtin:python",
    ],
    proto = "droid_r2bk_comm_cnc_proto",
)

proto_py_library(
    name = "droid_r2bk_comm_cnc_py_library",
    srcs = ["cnc_pb2.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/protobuf/droid_r2bk/comm/auth:droid_r2bk_comm_auth_py_library",
        "//lib/protobuf/droid_r2bk/comm/types:droid_r2bk_comm_types_py_library",
        "@com_google_protobuf//:protobuf_python",
    ],
)
